<resources>
    <string name="app_name">Timetwister</string>
    <string name="set_players">Set Players</string>
    <string name="set_life">Set Starting Life</string>
    <string name="set_timer">Set Timer</string>
    <string name="twenty_life">20</string>
    <string name="thirty_life">30</string>
    <string name="forty_life">40</string>
    <string name="custom_life">...</string>
    <string name="start_game">Start Game</string>
    <string name="starting_life">40</string>
    <string name="timer">5</string>
    <string name="minutes">mins</string>
</resources>
